packages/compiler-rs/tests/snapshots/transform_element__static_props.snap
---
source: tests/transform_element.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<div id=\"foo\" class=\"bar\"></div>", true);
(() => {
  const n0 = t0();
  return n0;
})();
