packages/compiler-rs/tests/snapshots/transform_element__v_on.snap
---
source: tests/transform_element.rs
expression: code
---
import { renderEffect as _renderEffect, setDynamicEvents as _setDynamicEvents, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _renderEffect(() => _setDynamicEvents(n0, obj));
  return n0;
})();
